# marcolongo.cloud

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc.json  README.md  Tiltfile  jest.preset.js  nx.json  package-lock.json  package.json  project.json  pyproject.toml  tailwind.preset.ts  tsconfig.base.json
.github/: renovate.json5
.github/workflows/: backport.yml  ci.yml  container.yml  main.yml  release.yml  renovate.yml  version.yml
api/: Dockerfile  project.json  pyproject.toml
api/tests/: test_main.py
apps/api/: Dockerfile  package.json  project.json  tsconfig.json  webpack-hmr.config.ts  webpack.config.ts
apps/api-e2e/: jest.config.ts  package.json  project.json
apps/app/: .eslintrc.json  Dockerfile  jest.config.ts  nginx.conf  package.json  project.json  proxy.conf.json
apps/app-e2e/: cypress.config.ts  package.json  project.json
apps/marcolongo.cloud/: .eslintrc.json  CHANGELOG.md  Dockerfile  jest.config.ts  package.json  project.json  proxy.conf.json  tailwind.config.ts
apps/marcolongo.cloud-api/: .eslintrc.json  CHANGELOG.md  Dockerfile  jest.config.ts  package.json  project.json  webpack-hmr.config.ts  webpack.config.js  webpack.config.ts
apps/marcolongo.cloud-api-e2e/: CHANGELOG.md  jest.config.ts  package.json  project.json
apps/marcolongo.cloud-e2e/: CHANGELOG.md  cypress.config.ts  package.json  project.json
chart/: Chart.yaml  values-dev.yaml  values-local.yaml
chart/templates/: deployment-api.yaml  deployment-app.yaml  deployment.yaml  service.yaml
libs/common-ui/: .eslintrc.json  CHANGELOG.md  jest.config.ts  ng-package.json  package-lock.json  package.json  project.json  tailwind.config.ts
libs/core/: CHANGELOG.md  jest.config.ts  package.json  project.json  (+2 more)
(+163 files in other folders)
