[tool.nx]
autoActivate = true

[tool.poetry]
name = "@marcolongo.cloud/source"
version = "1.0.0"
description = ""
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [tool.poetry.dependencies]
  python = ">=3.12,<3.13"

    [tool.poetry.dependencies.api]
    path = "api"
    develop = true

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.2"
ruff = "0.1.5"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"

[build-system]
requires = [ "poetry-core==1.1.0" ]
build-backend = "poetry.core.masonry.api"
