[tool.nx]
autoActivate = true

[tool.poetry]
name = "@marcolongo.cloud/source"
version = "1.0.0"
description = ""
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [tool.poetry.dependencies]
  python = ">=3.12,<3.13"

    [tool.poetry.dependencies.api]
    path = "api"
    develop = true

[tool.poetry.group.dev.dependencies]
autopep8 = "2.1.0"
ruff = "0.4.4"
pytest = "8.2.0"
pytest-sugar = "1.0.0"
pytest-cov = "5.0.0"
pytest-html = "4.1.1"

[build-system]
requires = [ "poetry-core==1.9.0" ]
build-backend = "poetry.core.masonry.api"
